@@ -1,5 +1,5 @@
 /* This is a generated file, edit the .stub.php file instead.
- * Stub hash: 75eacf08a17e18c30fb2111bb742c36b18aa9ead */
+ * Stub hash: 3e15bebb568e6e2031acbd932d6eefbd23984c83 */
 
 ZEND_BEGIN_ARG_WITH_RETURN_TYPE_INFO_EX(arginfo_pcntl_fork, 0, 0, IS_LONG, 0)
 ZEND_END_ARG_INFO()
@@ -157,6 +157,17 @@ ZEND_BEGIN_ARG_WITH_RETURN_TYPE_INFO_EX(arginfo_pcntl_getcpu, 0, 0, IS_LONG, 0)
 ZEND_END_ARG_INFO()
 #endif
 
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+ZEND_BEGIN_ARG_WITH_RETURN_OBJ_INFO_EX(arginfo_pcntl_getqos_class, 0, 0, QosClass, 0)
+ZEND_END_ARG_INFO()
+#endif
+
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+ZEND_BEGIN_ARG_WITH_RETURN_TYPE_INFO_EX(arginfo_pcntl_setqos_class, 0, 0, IS_VOID, 0)
+	ZEND_ARG_OBJ_INFO_WITH_DEFAULT_VALUE(0, qos_class, QosClass, 0, "QosClass::Default")
+ZEND_END_ARG_INFO()
+#endif
+
 ZEND_FUNCTION(pcntl_fork);
 ZEND_FUNCTION(pcntl_waitpid);
 ZEND_FUNCTION(pcntl_wait);
@@ -212,6 +223,12 @@ ZEND_FUNCTION(pcntl_setcpuaffinity);
 #endif
 #if defined(HAVE_SCHED_GETCPU)
 ZEND_FUNCTION(pcntl_getcpu);
+#endif
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+ZEND_FUNCTION(pcntl_getqos_class);
+#endif
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+ZEND_FUNCTION(pcntl_setqos_class);
 #endif
 
 static const zend_function_entry ext_functions[] = {
@@ -272,8 +289,20 @@ static const zend_function_entry ext_functions[] = {
 #if defined(HAVE_SCHED_GETCPU)
 	ZEND_FE(pcntl_getcpu, arginfo_pcntl_getcpu)
 #endif
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+	ZEND_FE(pcntl_getqos_class, arginfo_pcntl_getqos_class)
+#endif
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+	ZEND_FE(pcntl_setqos_class, arginfo_pcntl_setqos_class)
+#endif
 	ZEND_FE_END
 };
+
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+static const zend_function_entry class_QosClass_methods[] = {
+	ZEND_FE_END
+};
+#endif
 
 static void register_pcntl_symbols(int module_number)
 {
@@ -628,3 +657,22 @@ static void register_pcntl_symbols(int module_number)
 	REGISTER_LONG_CONSTANT("PCNTL_ECAPMODE", ECAPMODE, CONST_PERSISTENT);
 #endif
 }
+
+#if defined(HAVE_PTHREAD_SET_QOS_CLASS_SELF_NP)
+static zend_class_entry *register_class_QosClass(void)
+{
+	zend_class_entry *class_entry = zend_register_internal_enum("QosClass", IS_UNDEF, class_QosClass_methods);
+
+	zend_enum_add_case_cstr(class_entry, "UserInteractive", NULL);
+
+	zend_enum_add_case_cstr(class_entry, "UserInitiated", NULL);
+
+	zend_enum_add_case_cstr(class_entry, "Default", NULL);
+
+	zend_enum_add_case_cstr(class_entry, "Utility", NULL);
+
+	zend_enum_add_case_cstr(class_entry, "Background", NULL);
+
+	return class_entry;
+}
+#endif
