@@ -132,6 +132,7 @@ PHP                                                                        NEWS
   . Updated pcntl_get_signal_handler signal id upper limit to be
     more in line with platforms limits. (David Carlier)
   . Added pcntl_getcpu for Linux/FreeBSD. (David Carlier)
+  . Added pcntl_getqos_class/pcntl_setqos_class for macOs. (David Carlier)
 
 - PCRE:
   . Upgrade bundled pcre2lib to version 10.43. (nielsdos)
